@@ -8,7 +8,7 @@ Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Depends: R (>= 2.15.0)
 Depends: qgraph
 Suggests: lavaan, sem, MplusAutomation, OpenMx, rpanel
-Imports:  lavaan, sem, MplusAutomation, plyr, methods, XML
+Imports:  lavaan, sem, MplusAutomation, plyr, methods, XML, igraph
 ByteCompile: yes
 Description:  Path diagrams and visual analysis of various SEM packages' output
 URL: https://github.com/SachaEpskamp/semPlot
