@@ -42,3 +42,4 @@ import(plyr)
 import(XML)
 export(semPlotModel.Onyx)
 export(semPlotModel.Amos)
+importFrom(igraph,"layout.reingold.tilford","graph.edgelist")
