@@ -6,6 +6,10 @@ Changes in Version 0.2.0-4
    o The '+' function is now overloaded to combine 'semPlotModel' objects
    o The '+' operator can also be used in semPlotModel and semPaths calls. E.g., semPaths( fit1 + fit2 ).
   o Onyx model can now be imported
+  o Amos output can now be imported
+    o Variances are currently omitted
+  o igraph funtions can now be used as layout
+  o Added layout options "tree2" and "circle2". These call the reingold-tillford algoritm from igraph.
 
 Changes in Version 0.2.0-3
 	o Added '--' specifier for unknown edge (undirected)
